# clp

./: .hgignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  ProjectHome.md  README  TODO  acinclude.m4  aclocal.m4  clp.texinfo  configure.ac
doc/: report.tex
src/: DataTypes.h  Examine.c  Examine.h  FileUtilities.c  FileUtilities.h  List.c  ListStatistics.c  Makefile.am  Makefile.am.orig  Makefile.in  Modify.c  ParseTSTP.c  Parsing.c  Parsing.h  PrintTSTP.c  PrintTSTP.h  SystemOnTPTP.c  SystemOnTPTP.h  TestParsing.c  Tokenizer.c  Utilities.c  anc.in  anl.gl  anl.in  atom.h  atom_and_term.c  axiom.c  axiom.h  clpl.l  clpl_parser.y  common.h  con_dis.c  conjunction.h  constants.c  constants.h  constants_struct.h  disjunction.h  error_handling.c  error_handling.h  fact_set.c  (+98 more)
